syntax = "proto3";

package op;
option go_package = "github.com/x0y14/msnger/pkg/protobuf";

import "types.proto";


// [AUTH] FetchOps (FetchOpsRequest) -> stream Operation
message FetchOpsRequest {
  uint64 lastRevisionId = 1;
}

// [AUTH, ADMIN] SendOp (SendOpRequest) -> Operation
message SendOpRequest {
  types.Operation op = 1;
}


service OpService {
  rpc FetchOps(FetchOpsRequest) returns (stream types.Operation) {}
  rpc SendOp(SendOpRequest) returns (types.Operation) {}
}